2007-09-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (nma_menu_item_activate): fix for changes to nm_device_activate() in
			libnm-glib to pass connection object path rather than NMConnection
			object
		- (nma_finalize, nma_constructor): stop monitoring old GConf path for
			changes

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- (applet_dbus_settings_get_by_dbus_path): new function
		- (applet_dbus_settings_add_connection): new function; add an
			NMConnection to GConf and wrap and export it over D-Bus
		- (read_connection_from_gconf): fix gconf setting name
		- (add_keyring_item): new function; add a secret to the keyring
		- (copy_connection_to_gconf): new function; copy an NMConnection object
			to GConf and the keyring
		- (applet_dbus_connection_settings_new_from_connection): new function;
			create a new NMConnection D-Bus export wrapper from an NMConnection
			object

2007-09-13  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers.c
	  src/gconf-helpers.h
		- (nm_gconf_set_int_helper, nm_gconf_set_string_helper, 
		   nm_gconf_set_bool_helper, nm_gconf_set_stringlist_helper,
		   nm_gconf_set_bytearray_helper): new functions

2007-09-12  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c: Rewrite the VPN connection handling now that everything
	underneath has changed.

	* src/vpn-properties/nm-vpn-ui-interface.h: Convert properties to hash tables
	eveyrwhere.

	* src/vpn-properties/nm-vpn-properties.c: Create properties hash tables instead
	of GSLists.

	* src/vpn-password-dialog.c: Passwords are now dictionary items. Use odd strings
	from the helper output as keys, even keys for values.

	* src/vpn-connection-info.[ch]: Implement.

2007-09-11  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): fix it; need to
			specify the keyring items in a lot more detail now, using the
			connection name, the setting name, and the setting key for each
			secret
